调整内容上传拦截器的实现方式