@@ -9,13 +9,10 @@ import io.github.oldmanpushcart.dashscope4j.chat.message.Content;
 import io.github.oldmanpushcart.dashscope4j.chat.message.Message;
 import io.github.oldmanpushcart.dashscope4j.embeddingx.mm.FactorContent;
 import io.github.oldmanpushcart.dashscope4j.embeddingx.mm.MmEmbeddingRequest;
+import io.github.oldmanpushcart.internal.dashscope4j.util.CommonUtils;
 import io.github.oldmanpushcart.internal.dashscope4j.util.CompletableFutureUtils;
 
-import java.util.List;
-import java.util.Map;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 public abstract class ProcessContentRequestInterceptor implements RequestInterceptor {
 
@@ -31,51 +28,29 @@ public abstract class ProcessContentRequestInterceptor implements RequestInterce
     }
 
     private CompletableFuture<ApiRequest<?>> processChatRequest(InvocationContext context, ChatRequest request) {
+        return CompletableFutureUtils.thenForEachCompose(request.messages(), message -> processChatMessage(context, request, message))
+                .thenApply(messages -> ChatRequest.newBuilder(request)
+                        .messages(false, messages)
+                        .build());
+    }
 
-        // 从消息中提取content集合
-        final var contents = request.messages().stream()
-                .flatMap(message -> message.contents().stream())
-                .toList();
-
-        return processMappingContents(context, request, contents)
-                .thenApply(mapping -> {
-                    final var newMessages = request.messages().stream()
-                            .map(message -> Message.of(
-                                    message.role(),
-                                    message.contents().stream()
-                                            .map(mapping::get)
-                                            .collect(Collectors.toList())
-                            ))
-                            .toList();
-                    return ChatRequest.newBuilder(request)
-                            .messages(false, newMessages)
-                            .build();
+    private CompletableFuture<Message> processChatMessage(InvocationContext context, ChatRequest request, Message message) {
+        return CompletableFutureUtils.thenForEachCompose(message.contents(), content -> processContent(context, request, content))
+                .thenApply(contents -> {
+                    CommonUtils.updateList(false, message.contents(), contents);
+                    return message;
                 });
     }
 
     private CompletableFuture<ApiRequest<?>> processMmEmbeddingRequest(InvocationContext context, MmEmbeddingRequest request) {
-
-        // 从消息中提取content集合
-        final var contents = request.contents();
-
-        return processMappingContents(context, request, contents)
-                .thenApply(mapping -> {
-                    final var newContents = contents.stream()
-                            .<FactorContent<?>>map(key -> (FactorContent<?>) mapping.get(key))
-                            .collect(Collectors.toList());
-                    return MmEmbeddingRequest.newBuilder(request)
-                            .contents(false, newContents)
-                            .build();
+        return CompletableFutureUtils.thenForEachCompose(request.contents(), content -> processContent(context, request, content))
+                .thenApply(contents -> contents.stream().map(v -> (FactorContent<?>) v).toList())
+                .thenApply(contents -> {
+                    CommonUtils.updateList(false, request.contents(), contents);
+                    return request;
                 });
     }
 
-    private CompletableFuture<Map<Content<?>, Content<?>>> processMappingContents(InvocationContext context, AlgoRequest<?> request, List<? extends Content<?>> contents) {
-        return CompletableFutureUtils.thenForEachCompose(contents, content -> processContent(context, request, content))
-                .thenApply(newContents -> IntStream.range(0, contents.size())
-                        .boxed()
-                        .collect(Collectors.toMap(contents::get, newContents::get))
-                );
-    }
 
     private CompletableFuture<Content<?>> processContent(InvocationContext context, AlgoRequest<?> request, Content<?> content) {
         return processContentData(context, request, content.data())
@@ -91,6 +66,6 @@ public abstract class ProcessContentRequestInterceptor implements RequestInterce
                 });
     }
 
-    abstract protected CompletableFuture<Object> processContentData(InvocationContext context, AlgoRequest<?> request, Object data);
+    abstract CompletableFuture<Object> processContentData(InvocationContext context, AlgoRequest<?> request, Object data);
 
 }
